--- a/css/styles.css
+++ b/css/styles.css
@@ -852,24 +852,39 @@ margin-right: 0;
 
         width: 358px;
         height: 50px;
-        
         border: 1px solid rgba(255, 255, 255, 0.3);
         border-radius: 4px;
         background-color: var(--background-footer);
+       padding: 15px 16px;
 
     }
 
-    .field {
+    .subscribe-container input{
         background-color: var(--background-footer);
         padding: 0;
-    }
+        margin: 0;
+        border: none;
 
+     
+         }
+
+    .subscribe-container label {
+    position: relative;
+
+    color: var(--footer-contacts);
+    font-size: 16px;   
+    line-height: 1.25;
+    letter-spacing: 0.03em;   
+    }
 
     .btn-submit {
     position: relative;
-   
+    left: 358px;
+    bottom: 50px;
+
     min-width: 200px;
     padding: 10px 62px 10px 29px;
+    margin-left: 12px;
    
     border-radius: 4px;
     border: 0;
@@ -1129,7 +1144,7 @@ color: var(--title-font);
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 
-background-color: blueviolet;
+
 
 }
 
@@ -1157,7 +1172,6 @@ background-color: blueviolet;
 
 .form-modal {   
     min-width: 448px;
-    background-color: aqua;
    
 }
 
@@ -1168,41 +1182,82 @@ font-weight: 700;
 line-height: 1.15;
 letter-spacing: 0.03em;
 text-align: center;
+margin-bottom: 12px;
 
 }
 
-.form-modal label {
+.form-field {
     display: flex;
     flex-direction: column;
-    margin-bottom: 28px;
     font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
 }
 
-.label-field {
-    position: relative;
+
+
+.form-field label {
+    margin-bottom: 4px;
 }
 
-.icon-modal-form{
-    position: absolute;
+
+
+.form-field input {
+    margin: 0;
+    padding: 14px 0;
+    border: 1px solid;
+    border-color: rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.agree {
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    font-size: 14px;
+}
+
+input[type="checkbox"] {
+margin-right: 8px;
+}
+
+.comment {
+    padding: 12px 16px;
+    margin: 0;
+    border: 1px solid;
+    border-color: rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    resize: none;
+    
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+}
+
+.comment::placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+}
+
+.link-form {
+    color: var(--button-link-color);
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    font-size: 14px;
+}
+
+
+
+.icon-modal-form {
+  
     left: 0;
-    top: 50%;
+    top: 0;
     margin-left: 15px;
 }
 
-.form-modal input {
-   padding-top: 14px;
-   padding-bottom: 14px;
-}
-
-textarea {
-    resize: none;
-  }
-
-
 
 .btn-send {
-    display: inline-block;
-   
+    display: block;   
     min-width: 200px;
     padding: 10px 55px 10px 56px;
     margin-left: auto;
