--- a/css/styles.css
+++ b/css/styles.css
@@ -1230,6 +1230,7 @@ margin-bottom: 12px;
     border-radius: 4px;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    outline: none;
 }
 
   input:hover + .icon-form {
@@ -1278,6 +1279,7 @@ margin-right: 8px;
     border-color: rgba(33, 33, 33, 0.2);
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    outline: none;
 }
 
 .comment:hover {
