--- a/css/styles.css
+++ b/css/styles.css
@@ -860,6 +860,8 @@ margin-right: 0;
         padding: 15px 16px;
         color: var(--footer-contacts);
         outline: transparent;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .subscribe-field:hover,
